fix:signature image overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -3836,6 +3836,10 @@
  .s-about__content-bottom .btn--download:focus svg path {
      fill: white;
  }
+
+ .signature-wrapper {
+    text-align: center;
+ }
  
  /* ------------------------------------------------------------------- 
   * responsive:
